--- a/documentation/asciidoc/topics/proc_downloading_code.adoc
+++ b/documentation/asciidoc/topics/proc_downloading_code.adoc
@@ -7,32 +7,29 @@ Add your artifacts to an HTTP or FTP server so that {ispn_operator} downloads th
 When downloading files, {ispn_operator} can automatically detect the file type.
 {ispn_operator} also extracts archived files, such as `zip` or `tgz`, to the filesystem after the download completes.
 
+You can also download Maven artifacts using the `groupId:artifactId:version` format, for example `org.postgresql:postgresql:42.3.1`.
+
 [NOTE]
 ====
 Each time {ispn_operator} creates a {brandname} node it downloads the artifacts to the node.
-The download also occurs when {ispn_operator} recreates pods after terminating them.
 ====
 
 .Prerequisites
 
-* Host your code artifacts on an HTTP or FTP server.
+* Host your code artifacts on an HTTP or FTP server or publish them to a maven repository.
 
 .Procedure
 
 . Add the `spec.dependencies.artifacts` field to your `Infinispan` CR.
-.. Specify the location of the file to download via `HTTP` or `FTP` as the value of the `spec.dependencies.artifacts.url` field.
-.. Optionally specify a checksum to verify the integrity of the download with the `spec.dependencies.artifacts.hash` field.
+. Do one of the following:
++
+* Specify the location of the file to download via `HTTP` or `FTP` as the value of the `spec.dependencies.artifacts.url` field.
+* Provide the Maven artifact to download with the `groupId:artifactId:version` format as the value of the `spec.dependencies.artifacts.maven` field.
+. Optionally specify a checksum to verify the integrity of the download with the `spec.dependencies.artifacts.hash` field.
 +
 The `hash` field requires a value is in the format of `<algorithm>:<checksum>` where `<algorithm>` is `sha1|sha224|sha256|sha384|sha512|md5`.
 +
-.. Set the file type, if necessary, with the `spec.dependencies.artifacts.type` field.
-+
-You should explicitly set the file type if it is not included in the URL or if the file type is actually different to the extension in the URL.
-+
-[NOTE]
-====
-If you set `type: file`, {ispn_operator} downloads the file as-is without extracting it to the filesystem.
-====
+
 +
 [source,yaml,options="nowrap",subs=attributes+]
 ----
