--- a/documentation/asciidoc/stories/assembly_upgrading_clusters.adoc
+++ b/documentation/asciidoc/stories/assembly_upgrading_clusters.adoc
@@ -4,7 +4,7 @@ ifdef::context[:parent-context: {context}]
 = Upgrading {brandname} clusters
 
 [role="_abstract"]
-{ispn_operator} handles {brandname} cluster upgrades when new versions become available.
+{ispn_operator} lets you upgrade {brandname} clusters from one version to another without downtime or data loss.
 
 //Community content
 ifdef::community[]
@@ -27,6 +27,7 @@ endif::downstream[]
 include::{topics}/con_cluster_upgrades.adoc[leveloffset=+1]
 include::{topics}/proc_upgrading_clusters_downtime.adoc[leveloffset=+1]
 include::{topics}/proc_upgrading_clusters_rolling.adoc[leveloffset=+1]
+include::{topics}/proc_recovering_rolling_upgrades.adoc[leveloffset=+2]
 
 // Restore the parent context.
 ifdef::parent-context[:context: {parent-context}]
