--- a/documentation/asciidoc/topics/con_infinispan_cr.adoc
+++ b/documentation/asciidoc/topics/con_infinispan_cr.adoc
@@ -32,4 +32,6 @@ include::yaml/infinispan_cr.yaml[]
 |`spec.service.type`
 |Specifies the type of {brandname} service to create.
 
+| `spec.version`
+| Specifies the {brandname} Server version of your cluster.
 |===
