--- a/documentation/asciidoc/topics/con_hotrod_clients.adoc
+++ b/documentation/asciidoc/topics/con_hotrod_clients.adoc
@@ -6,11 +6,20 @@ Hot Rod is a binary TCP protocol that {brandname} provides for high-performance 
 
 .Client intelligence
 
-The Hot Rod protocol includes a mechanism that provides clients with an up to date view of the cache topology.
+The Hot Rod protocol includes a mechanism that provides clients with an up-to-date view of the cache topology.
 Client intelligence improves performance by reducing the number of network hops for read and write operations.
 
+`HASH_DISTRIBUTION_AWARE` is the default intelligence mechanism, and it allows clients to route requests to primary owners, which provides the best performance for Hot Rod clients.
+
+[NOTE]
+====
+Hot Rod clients must use `BASIC` intelligence in the following situations:
+
+* Connecting to {brandname} through a `LoadBalancer`, `NodePort`, or {openshiftshort} `Route`.
+* Accessing a different {k8s} cluster when using cross-site replication.
+====
+
 Clients running in the same {k8s} cluster can access internal IP addresses for {brandname} pods so you can use any client intelligence.
-The default intelligence, `HASH_DISTRIBUTION_AWARE`, is recommended because it allows clients to route requests to primary owners, which improves performance.
 
 [NOTE]
 ====
@@ -18,4 +27,7 @@ The default intelligence, `HASH_DISTRIBUTION_AWARE`, is recommended because it a
 In some cases network isolation policies can require you to use `BASIC` intelligence even when clients are running in the same {k8s} cluster but a different namespace.
 ====
 
-Hot Rod clients must use `BASIC` intelligence when connecting to {brandname} through a `LoadBalancer`, `NodePort`, or {openshiftshort} `Route`.
+
+
+
+
