--- a/documentation/asciidoc/topics/con_hotrod_clients.adoc
+++ b/documentation/asciidoc/topics/con_hotrod_clients.adoc
@@ -9,14 +9,14 @@ Hot Rod is a binary TCP protocol that {brandname} provides for high-performance 
 The Hot Rod protocol includes a mechanism that provides clients with an up-to-date view of the cache topology.
 Client intelligence improves performance by reducing the number of network hops for read and write operations.
 
-`HASH_DISTRIBUTION_AWARE` is the default intelligence mechanism, and it allows clients to route requests to primary owners, which provides the best performance for Hot Rod clients.
+`HASH_DISTRIBUTION_AWARE` is the default intelligence mechanism and enables clients to route requests to primary owners, which provides the best performance for Hot Rod clients.
 
 [NOTE]
 ====
 Hot Rod clients must use `BASIC` intelligence in the following situations:
 
 * Connecting to {brandname} through a `LoadBalancer`, `NodePort`, or {openshiftshort} `Route`.
-* Accessing a different {k8s} cluster when using cross-site replication.
+* Failing over to a different {k8s} cluster when using cross-site replication.
 ====
 
 Clients running in the same {k8s} cluster can access internal IP addresses for {brandname} pods so you can use any client intelligence.
