1657#/cli_jvm_options

--- a/documentation/asciidoc/topics/proc_setting_jvm_options.adoc
+++ b/documentation/asciidoc/topics/proc_setting_jvm_options.adoc
@@ -6,12 +6,27 @@ Pass additional JVM options to {brandname} pods at startup.
 
 .Procedure
 
-. Specify JVM options with the `spec.container.extraJvmOpts` field.
+. Configure JVM options with the `spec.container` filed in your `Infinispan` CR.
 . Apply your `Infinispan` CR.
 +
 If your cluster is running, {ispn_operator} restarts the {brandname} pods so changes take effect.
 
+.JVM options
 [source,options="nowrap",subs=attributes+]
 ----
 include::yaml/container_extra_jvm_opts.yaml[]
 ----
+
+[%autowidth,cols="1,1",stripes=even]
+|===
+|Field | Description
+
+|`spec.container.extraJvmOpts`
+| Specifies additional JVM options for the {brandname} Server.
+
+|`spec.container.routerExtraJvmOpts`
+| Specifies additional JVM options for the Gossip router.
+
+| `spec.container.cliExtraJvmOpts`
+| Specifies additional JVM options for the {brandname} CLI.
+|===
