--- a/documentation/asciidoc/stories/assembly_creating_services.adoc
+++ b/documentation/asciidoc/stories/assembly_creating_services.adoc
@@ -18,6 +18,11 @@ include::{topics}/ref_persistent_cache_store.adoc[leveloffset=+2]
 include::{topics}/proc_allocating_cpu_memory.adoc[leveloffset=+1]
 include::{topics}/proc_setting_jvm_options.adoc[leveloffset=+1]
 
+// Downstream content
+ifdef::downstream[]
+include::{topics}/proc_disabling_fips_mode_cr.adoc[leveloffset=+1]
+endif::downstream[]
+
 //Logging
 include::{topics}/proc_configuring_logging.adoc[leveloffset=+1]
 include::{topics}/ref_logging.adoc[leveloffset=+2]
