--- a/documentation/asciidoc/topics/ref_cross_site_resources.adoc
+++ b/documentation/asciidoc/topics/ref_cross_site_resources.adoc
@@ -23,6 +23,12 @@ The following tables provides fields and descriptions for cross-site resources.
 |`service.sites.local.name`
 |Names the local site where a {brandname} cluster runs.
 
+|`service.sites.local.maxRelayNodes`
+|Specifies the maximum number of pods that can send RELAY messages for cross-site replication. The default value is `1`.
+
+|`service.sites.local.discovery.launchGossipRouter`
+|If `false`, the cross-site services and the Gossip Router pod are not created in the local site. The default value is `true`.
+
 |`service.sites.local.expose.type`
 |Specifies the network service for cross-site replication. {brandname} clusters use this service to communicate and perform backup operations. You can set the value to `NodePort`, `LoadBalancer`, or `Route`.
 
@@ -34,9 +40,6 @@ The following tables provides fields and descriptions for cross-site resources.
 
 |`service.sites.local.expose.routeHostName`
 |Specifies a custom hostname if you expose {brandname} through an {openshiftshort} `Route`. If you do not set a value then {openshiftshort} generates a hostname.
-
-|`service.sites.local.maxRelayNodes`
-|Specifies the maximum number of pods that can send RELAY messages for cross-site replication. The default value is `1`.
 
 |===
 
