--- a/documentation/asciidoc/topics/attributes/community-attributes.adoc
+++ b/documentation/asciidoc/topics/attributes/community-attributes.adoc
@@ -23,6 +23,7 @@
 :backup_path: /opt/infinispan/backups
 :server_image: quay.io/infinispan/server
 :server_image_version: 14.0.1
+:operand_version: 14.0.1
 
 :ispn_operator: Infinispan Operator
 :ispn_operator_version: 2.3
