--- a/documentation/asciidoc/topics/ref_datagrid_service_resources.adoc
+++ b/documentation/asciidoc/topics/ref_datagrid_service_resources.adoc
@@ -56,12 +56,15 @@ include::yaml/datagrid_service.yaml[]
 |`spec.configMapName`
 |Specifies a `ConfigMap` that contains {brandname} configuration.
 
-|`spec.configListener`
+|`spec.configListener.enabled`
 |Creates a `listener` pod in each {brandname} cluster that allows {ispn_operator} to reconcile server-side modifications with {brandname} resources such as the `Cache` CR.
 
 The `listener` pod consumes minimal resources and is enabled by default.
 Setting a value of `false` removes the `listener` pod and disables bi-directional reconciliation.
 You should do this only if you do not need declarative Kubernetes representations of {brandname} resources created through the {brandname} Console, CLI, or client applications.
+
+|`spec.configListener.logging`
+|Configures the logging level used by the ConfigListener deployments. Can be one of `Debug | Info | Error`. The default level is `Info`.
 
 |`spec.affinity`
 |Configures anti-affinity strategies that guarantee {brandname} availability.
