--- a/documentation/asciidoc/topics/ref_datagrid_service_resources.adoc
+++ b/documentation/asciidoc/topics/ref_datagrid_service_resources.adoc
@@ -63,8 +63,8 @@ The `listener` pod consumes minimal resources and is enabled by default.
 Setting a value of `false` removes the `listener` pod and disables bi-directional reconciliation.
 You should do this only if you do not need declarative Kubernetes representations of {brandname} resources created through the {brandname} Console, CLI, or client applications.
 
-|`spec.configListener.logging`
-|Configures the logging level used by the ConfigListener deployments. Can be one of `Debug | Info | Error`. The default level is `Info`.
+|`spec.configListener.logging.levels`
+|Configures the logging level used by the ConfigListener deployments. Can be one of `debug | info | error`. The default level is `info`.
 
 |`spec.affinity`
 |Configures anti-affinity strategies that guarantee {brandname} availability.
