--- a/documentation/asciidoc/stories/assembly_configuring_clusters.adoc
+++ b/documentation/asciidoc/stories/assembly_configuring_clusters.adoc
@@ -8,6 +8,7 @@ Apply custom {brandname} configuration to clusters that {ispn_operator} manages.
 
 include::{topics}/proc_applying_custom_configuration.adoc[leveloffset=+1]
 include::{topics}/ref_infinispan_config.adoc[leveloffset=+1]
+include::{topics}/proc_securing_custom_configuration.adoc[leveloffset=+1]
 
 // Restore the parent context.
 ifdef::parent-context[:context: {parent-context}]
