docs review credential store config

--- a/documentation/asciidoc/topics/proc_securing_custom_configuration.adoc
+++ b/documentation/asciidoc/topics/proc_securing_custom_configuration.adoc
@@ -2,11 +2,11 @@
 = Securing custom {brandname} configuration
 
 [role="_abstract"]
-Define and store custom {brandname} configuration that requires credentials securely.
-To protect sensitive text strings such as passwords, add the entries in a credential store rather than directly in the `Infinispan` CR.
+Securely define and store custom {brandname} Server configuration.
+To protect sensitive text strings such as passwords, add the entries in a credential store rather than directly in the {brandname} Server configuration.
 
 .Prerequisites
-* Have valid {brandname} configuration in XML, YAML, or JSON format.
+* Have a valid {brandname} configuration in XML, YAML, or JSON format.
 
 .Procedure
 . Create a `CredentialStore Secret` file.
@@ -15,14 +15,7 @@ To protect sensitive text strings such as passwords, add the entries in a creden
 .User-secret.yaml
 [source,yaml]
 ----
-apiVersion: v1
-kind: Secret
-metadata:
-  name: user-secret
-type: Opaque
-data:
-  cred1: sensitive-value
-  cred2: sensitive-value2
+include::yaml/credential_store_secret.yaml[]
 ----
 
 . Open the `Infinispan` CR for editing.
@@ -31,9 +24,7 @@ data:
 .Infinispan CR
 [source,yaml]
 ----
-spec:
-  security:
-    credentialStoreSecretName: user-secret
+include::yaml/credential_store.yaml[]
 ----
 
 . Apply the changes.
