CredentialStore only created when TLS configured. Fixes #1756

--- a/documentation/asciidoc/topics/proc_securing_custom_configuration.adoc
+++ b/documentation/asciidoc/topics/proc_securing_custom_configuration.adoc
@@ -34,3 +34,8 @@ include::yaml/credential_store.yaml[]
 ----
 
 . Apply the changes.
+. Define a `credential-reference` in your configuration with `store="credentials"`.
+
+[role="_additional-resources"]
+.Additional resources
+* link:{server_docs}##credential-keystore-references_credential-keystores[Defining credential store references]
