docs#1761 Cache CR update strategy, encryption with HR and Routes
add notes that route connections require encryption

add docs for Cache CR update strategy

--- a/documentation/asciidoc/topics/proc_exposing_route.adoc
+++ b/documentation/asciidoc/topics/proc_exposing_route.adoc
@@ -12,6 +12,8 @@ ifdef::downstream[]
 Use an {openshiftshort} `Route` with passthrough encryption to make {brandname} clusters available on the network.
 endif::downstream[]
 
+NOTE: To access {brandname} with Hot Rod client, you must configure TLS with SNI.
+
 .Procedure
 
 . Include `spec.expose` in your `Infinispan` CR.
