--- a/documentation/asciidoc/topics/con_hotrod_clients.adoc
+++ b/documentation/asciidoc/topics/con_hotrod_clients.adoc
@@ -4,7 +4,8 @@
 [role="_abstract"]
 Hot Rod is a binary TCP protocol that {brandname} provides for high-performance data transfer capabilities with remote clients.
 
-.Client intelligence
+[discrete]
+== Client intelligence
 
 The Hot Rod protocol includes a mechanism that provides clients with an up-to-date view of the cache topology.
 Client intelligence improves performance by reducing the number of network hops for read and write operations.
@@ -13,11 +14,19 @@ Clients running in the same {k8s} cluster can access internal IP addresses for {
 
 `HASH_DISTRIBUTION_AWARE` is the default intelligence mechanism and enables clients to route requests to primary owners, which provides the best performance for Hot Rod clients.
 
-.`BASIC` intelligence
+Clients running on a different {k8s}, or outside {k8s}, can access {brandname} by using a `LoadBalancer`, `NodePort`, or {openshiftshort} `Route`.
+
+[IMPORTANT]
+====
+Hot Rod client connections via {k8s} `Route` require encryption.
+You must configure TLS with SNI otherwise the Hot Rod connection fails.
+
+For unencrypted Hot Rod client connections, you must use a `LoadBalancer` service or a `NodePort` service.
+====
 
 Hot Rod clients must use `BASIC` intelligence in the following situations:
 
-* Connecting to {brandname} through a `LoadBalancer`, `NodePort`, or {openshiftshort} `Route`.
+* Connecting to {brandname} through a `LoadBalancer` service, a `NodePort` service, or an {openshiftshort} `Route`.
 * Failing over to a different {k8s} cluster when using cross-site replication.
 
 {k8s} cluster administrators can define network policies that restrict traffic to {brandname}.
