--- a/documentation/asciidoc/stories/assembly_cross_site_replication.adoc
+++ b/documentation/asciidoc/stories/assembly_cross_site_replication.adoc
@@ -28,6 +28,7 @@ include::{topics}/proc_configuring_sites_automatically.adoc[leveloffset=+2]
 include::{topics}/proc_configuring_sites_manually.adoc[leveloffset=+1]
 include::{topics}/proc_disabling_gossip_router_cross_site.adoc[leveloffset=+1]
 include::{topics}/ref_cross_site_resources.adoc[leveloffset=+1]
+include::{topics}/proc_xsite_allocating_cpu_memory.adoc[leveloffset=+1]
 include::{topics}/proc_securing_cross_site_connections.adoc[leveloffset=+1]
 include::{topics}/ref_cross_site_tls_resources.adoc[leveloffset=+2]
 include::{topics}/ref_cross_site_tls_secrets.adoc[leveloffset=+2]
