--- a/documentation/asciidoc/topics/proc_configuring_service_monitor_target_labels.adoc
+++ b/documentation/asciidoc/topics/proc_configuring_service_monitor_target_labels.adoc
@@ -2,13 +2,13 @@
 = Configuring Service Monitor Target Labels
 
 [role="_abstract"]
-You can configure the generated `ServiceMonitor` to propagate Service labels to the underlying metrics via the ServiceMonitor
-`spec.targetLabels` field.
+You can configure the generated `ServiceMonitor` to propagate Service labels to the underlying metrics using the ServiceMonitor `spec.targetLabels` field.
+Use the Service labels to filter and aggregate the metrics collected from the monitored endpoints.
 
 .Procedure
 
-. Define labels to apply to your service by setting the `infinispan.org/targetLabels` annotation on your `Infinispan` CR.
-. Define a comma-separate list of the labels required in your metrics via the `infinispan.org/serviceMonitorTargetLabels` annotation on your `Infinispan` CR.
+. Define labels to apply to your service by setting the `infinispan.org/targetLabels` annotation in your `Infinispan` CR.
+. Specify a comma-separated list of the labels required in your metrics using the `infinispan.org/serviceMonitorTargetLabels` annotation on your `Infinispan` CR.
 +
 [source,yaml,options="nowrap",subs=attributes+]
 ----
