--- a/documentation/asciidoc/topics/attributes/downstream-attributes.adoc
+++ b/documentation/asciidoc/topics/attributes/downstream-attributes.adoc
@@ -22,3 +22,9 @@
 //
 :kube_client: oc
 :native_cli: redhat-datagrid-cli
+
+//
+// External links
+//
+:cryostat_installation: https://access.redhat.com/documentation/en-us/red_hat_build_of_cryostat/2/html/installing_cryostat/index[Installing Cryostat]
+:cryostat_security_configuration: https://access.redhat.com/documentation/en-us/red_hat_build_of_cryostat/2/html-single/using_cryostat_to_manage_a_jfr_recording/index#proc_storing-managing-jmx-credentials_assembly_security-options[Configuring Cryostat Credentials]
