--- a/documentation/asciidoc/stories/assembly_monitoring.adoc
+++ b/documentation/asciidoc/stories/assembly_monitoring.adoc
@@ -30,6 +30,9 @@ endif::downstream[]
 include::{topics}/proc_creating_grafana_datasources.adoc[leveloffset=+1]
 include::{topics}/proc_configuring_grafana_dashboards.adoc[leveloffset=+1]
 
+include::{topics}/proc_enabling_jmx.adoc[leveloffset=+1]
+include::{topics}/proc_deploying_cryostat.adoc[leveloffset=+1]
+
 // Restore the parent context.
 ifdef::parent-context[:context: {parent-context}]
 ifndef::parent-context[:!context:]
