Cryostat Integration. Resolves #1831
Co-authored-by: Dominika Vagnerova <dvagnero@redhat.com>

--- a/documentation/asciidoc/topics/attributes/community-attributes.adoc
+++ b/documentation/asciidoc/topics/attributes/community-attributes.adoc
@@ -78,3 +78,5 @@
 
 //Helm chart
 :helm_chart_docs: https://infinispan.org/docs/helm-chart/main/helm-chart.html
+
+:crystat_installation: https://cryostat.io/get-started/#installing-cryostat-operator[Installing Cryostat Operator]
