--- a/documentation/asciidoc/topics/proc_adding_labels_annotations_env.adoc
+++ b/documentation/asciidoc/topics/proc_adding_labels_annotations_env.adoc
@@ -12,12 +12,12 @@ Add labels and annotations to your {ispn_operator} subscription with the `spec.c
 +
 [source,options="nowrap",subs=attributes+]
 ----
-{oc_edit} subscription {subscription_name} -n openshift-operators
+{oc_edit} subscription {subscription_name} -n {example_namespace}
 ----
 
 * Use the {openshift} Console.
 +
-. Navigate to **Operators** > **Installed Operators** > **Subscription**.
+. Navigate to **Operators** > **Installed Operators** > click the *{ispn_operator}*.
 . Select **Edit Subscription** from the **Actions** menu.
 
 .Labels and annotations with environment variables
